# natos

./: .dockerignore  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
boot/: Dockerfile
hack/: autofix.sh  boot.sh  build.sh  clean.sh  common.sh  format.sh
init/: Cargo.toml
init/src/: cmdline.rs  lib.rs  main.rs
init/src/early/: mod.rs  rlimit.rs  sysctl.rs  util.rs
initrd/: Dockerfile  build.sh
kernel/: Dockerfile  docker-build.sh
kitty/: Cargo.toml
kitty/src/: lib.rs  main.rs  startup.rs  utils.rs
kitty/src/shell/: command.rs  frontend.rs  mod.rs
kitty/src/shell/commands/: all.rs  help.rs  meow.rs  mod.rs  panic.rs  purrview.rs  reboot.rs  shutdown.rs
mini/: Cargo.toml  Dockerfile
mini/src/: image.rs  init.rs  main.rs  render.rs
purr/: Cargo.toml
purr/src/: lib.rs  main.rs
purr/src/assets/: mod.rs
purr/src/gfx/: card.rs  display.rs  mod.rs  render.rs
uki/: Dockerfile
vm/: Dockerfile.ovmf
