[workspace]
exclude = [
    "mini",
]
members = [
    "init",
    "kitty",
    "purr",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
drm = "0.14.1"
libc = "0.2.171"
rustyline = "17.0.0"
shlex = "1.3.0"
walkdir = "2.5.0"

[workspace.dependencies.image]
version = "0.25.6"
default-features = false
features = ["jpeg", "png"]

# liv would be disappointed that this has nothing to do with *that* nix.
[workspace.dependencies.nix]
version = "0.30.1"
features = ["fs", "process"]

[workspace.dependencies.sys-mount]
version = "3.0.1"
default-features = false
