[package]
name = "mini"
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
uefi = "0.35.0"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png"]

[[bin]]
name = "mini"
path = "src/main.rs"

[patch.crates-io.simd-adler32]
path = "deps/simd-adler32"
